--- a/nextgenjs/index.html
+++ b/nextgenjs/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Understanding TypeScript</title>
-  <script src="app.js" defer></script>
+  <script src="dist/app.js"></script>
+  <title>Document</title>
 </head>
 <body>
   
